Use gulp instead of grunt

--- a/examples/bookings.html
+++ b/examples/bookings.html
@@ -15,7 +15,7 @@
   <script type="text/javascript" src="http://ajax.googleapis.com/ajax/libs/jquery/2.1.3/jquery.min.js"></script>
 
   <x-div class="scheduler"
-    data-controller='../dist/fl-booking.js'
+    data-controller='../dist/fl-booking'
     data-api="http://localhost:8080">
   </x-div>
 </body>
