--- a/examples/bookings.html
+++ b/examples/bookings.html
@@ -5,18 +5,21 @@
   <title>fl-booking Demo</title>
 
   <style>
-    x-div {
-      display: block;
-    }
+    body { background-color: #eee; min-width: 100vw; min-height: 100vh; }
+    x-div { display: block; }
+    .container { padding: 1px; margin: auto; max-width: 80%; }
+    .title { font-family: "Ubuntu", "Helvetica Neue", Helvetica,Arial,sans-serif; text-align: center; color: #1a6ba9 }
   </style>
 </head>
 <body>
+  <a href="https://github.com/fourlabsldn/fl-booking-js"><img style="position: absolute; top: 0; right: 0; border: 0;" src="https://camo.githubusercontent.com/38ef81f8aca64bb9a64448d0d70f1308ef5341ab/68747470733a2f2f73332e616d617a6f6e6177732e636f6d2f6769746875622f726962626f6e732f666f726b6d655f72696768745f6461726b626c75655f3132313632312e706e67" alt="Fork me on GitHub" data-canonical-src="https://s3.amazonaws.com/github/ribbons/forkme_right_darkblue_121621.png"></a>
   <script src="https://rawgit.com/fourlabsldn/x-div/master/dist/x-div.js"></script>
   <script type="text/javascript" src="http://ajax.googleapis.com/ajax/libs/jquery/2.1.3/jquery.min.js"></script>
 
-  <x-div class="scheduler"
-    data-controller='../dist/fl-booking'
-    data-api="http://localhost:8080">
-  </x-div>
+  <h1 class="title">fl-booking</h1>
+  <div class="container">
+    <x-div class="scheduler"  data-controller='../dist/fl-booking' data-api="http://localhost:8080" />
+  </div>
+
 </body>
 </html>
