--- a/examples/bookings.html
+++ b/examples/bookings.html
@@ -15,19 +15,26 @@
   <a href="https://github.com/fourlabsldn/fl-booking-js"><img style="position: absolute; top: 0; right: 0; border: 0;" src="https://camo.githubusercontent.com/38ef81f8aca64bb9a64448d0d70f1308ef5341ab/68747470733a2f2f73332e616d617a6f6e6177732e636f6d2f6769746875622f726962626f6e732f666f726b6d655f72696768745f6461726b626c75655f3132313632312e706e67" alt="Fork me on GitHub" data-canonical-src="https://s3.amazonaws.com/github/ribbons/forkme_right_darkblue_121621.png"></a>
   <script src="https://rawgit.com/fourlabsldn/x-div/master/dist/x-div.js"></script>
   <script type="text/javascript" src="http://ajax.googleapis.com/ajax/libs/jquery/2.1.3/jquery.min.js"></script>
+  <script src='../dist/fl-booking.js'></script>
 
-  <!-- In the Demo we will not really make calls to the server, we will use a mockup -->
-  <script src="server-mockup.js"></script>
+  <script src="fake-events-creator.js"></script>
 
   <h1 class="title">fl-booking</h1>
   <div class="container">
-    <x-div
-      data-controller='../dist/fl-booking'
-      data-api="http://localhost:8080"
-      data-autofill-user="James"
-      data-autofill-email="james.brown@soul.com"
-    />
+    <div class="booking-target"></div>
   </div>
+
+
+  <script>
+    flBooking({
+      autofillUser: 'James',
+      autofillEmail: 'james@brown.com',
+      targetEl: document.querySelector('.booking-target'),
+      createBooking: console.log,
+      getEvents: data => createFakeEvents(1000),
+    });
+
+  </script>
 
 </body>
 </html>
