Fix demo createBooking method

--- a/examples/bookings.html
+++ b/examples/bookings.html
@@ -37,7 +37,7 @@
         timezone: 'Europe/London',
         utc_offset: 0,
       },
-      createBooking: data => { console.log(data); Promise.resolve(data) }, // must return a promise
+      createBooking: data => { console.log(data); return Promise.resolve(data) }, // must return a promise
       getEvents: data => createFakeEvents(1000),
     });
 
